--- a/views/partials/header/_navigation.erb
+++ b/views/partials/header/_navigation.erb
@@ -1,12 +1,24 @@
 <nav aria-label="Primary" class="primary-navigation">
   <ul>
     <% datastores.each do |datastore| %>
+      <%
+        # Destructure properties
+        slug, title = [datastore[:slug], datastore[:title]]
+        # Set baseline classes
+        classes = ["underline__none"]
+        # Add extra class if datastore slug is "everything"
+        if slug == "everything"
+          classes << "primary-navigation__everything"
+        end
+        # Add extra attributes if current page matches the datastore slug
+        rest = slug == request.path_info.split("/")[1] ? "aria-current=\"page\"" : nil
+      %>
       <li>
         <%= link_to(
-          body: (datastore[:slug] == "everything" ? "<span class=\"material-symbols-rounded material-symbols-filled\" aria-hidden=\"true\">dashboard</span>" : "") + "<span>#{datastore[:title]}</span>",
-          url: "/#{datastore[:slug]}",
-          classes: ["underline__none"],
-          rest: datastore[:slug] == current_datastore ? "aria-current=\"page\"" : nil
+          body: title,
+          url: "/#{slug}",
+          classes: classes,
+          rest: rest
         ) %>
       </li>
     <% end %>
