adds development user dropdown when dev_login is enabled

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -76,7 +76,11 @@
   <main>
     <div class="container">
       <%= yield %>
+      <% if S.dev_login? %>
+        <%= erb :'partials/_development_users' %>
+      <% end %>
     </div>
+
   </main>
   <%= erb :'partials/_footer' %>
   <% @presenter.scripts.flatten.each do |script| %>
