Styling `_development_users`.

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -1,5 +1,6 @@
 @use './forms';
 @use 'partials/header';
+@use 'partials/development_users';
 @use 'partials/footer';
 
 // --------------------------------------------------
