--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -1,38 +1,23 @@
+@use './messages';
+@use 'sass:map';
+
 // --------------------------------------------------
 //
 // # Typography
 //   Styling for common text elements and classes.
 //
-// ## Table of Contents
-//   1. Mixins
-//   2. Headings
-//   3. Sizes
-//   4. Weight
-//   5. Material Icons
+//   1. Headings
+//   2. Sizes
+//   3. Weight
 //
 // --------------------------------------------------
-
-
-
-
-
-// ***************** //
-// *** 1. MIXINS *** //
-// ***************** //
-
-@mixin icon($fill: false) {
-  font-family: "Material Symbols Rounded";
-  @if $fill {
-    font-variation-settings: "FILL" 1;
-  }
-}
 
 
 
 
 
 // ******************* //
-// *** 2. HEADINGS *** //
+// *** 1. HEADINGS *** //
 // ******************* //
 
 h1 {
@@ -64,7 +49,7 @@ h6 {
 
 
 // **************** //
-// *** 3. SIZES *** //
+// *** 2. SIZES *** //
 // **************** //
 
 .text__large {
@@ -76,22 +61,9 @@ h6 {
 
 
 // ****************** //
-// *** 4. WEIGHTS *** //
+// *** 3. WEIGHTS *** //
 // ****************** //
 
 .strong {
   font-weight: 700;
-}
-
-
-
-
-
-// ************************* //
-// *** 5. MATERIAL ICONS *** //
-// ************************* //
-
-[class^="material-symbols-"] {
-  font-size: 1em;
-  vertical-align: middle;
 }
