--- a/views/partials/header/_search.erb
+++ b/views/partials/header/_search.erb
@@ -3,7 +3,13 @@
 <form class="search-form" role="search" method="get" action="">
   <div class="search-form__inputs viewport-container">
     <select aria-label="Select an option" class="search-form__inputs--select" autocomplete="off">
-      <% if search_options.show_optgroups? %>
+      <% if search_options.no_optgroups? %>
+        <% search_options.each do |search_option| %>
+          <option value="<%= search_option.value %>" <%= search_options.selected_attribute(search_option.value) %>>
+            <%= search_option.text %>
+          </option>
+        <% end %>
+      <% else %>
         <% search_options.each do |optgroup|%>
           <optgroup label="<%= optgroup.optgroup.capitalize %> by">
             <% optgroup.options.each do |option| %>
@@ -12,12 +18,6 @@
               </option>
             <% end %>
           </optgroup>
-        <% end %>
-      <% else %>
-        <% search_options.each do |search_option| %>
-          <option value="<%= search_option.value %>" <%= search_options.selected_attribute(search_option.value) %>>
-            <%= search_option.text %>
-          </option>
         <% end %>
       <% end %>
     </select>
