--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -25,8 +25,8 @@
     </ul>
   </nav>
 </m-website-header>
-<%= erb :'partials/header/_search', locals: { current_datastore: @current_datastore } %>
-<%= erb :'partials/header/_navigation', locals: { datastores: @datastores } %>
+<%= erb :'partials/header/_search' %>
+<%= erb :'partials/header/_navigation' %>
 <div class="logo__print">
   <%= erb :'partials/header/_logo' %>
 </div>
