--- a/views/partials/header/_navigation.erb
+++ b/views/partials/header/_navigation.erb
@@ -1,6 +1,6 @@
 <nav aria-label="Primary" class="primary-navigation">
   <ul>
-    <% datastores.each do |datastore| %>
+    <% @datastores.each do |datastore| %>
       <%
         # Destructure properties
         slug, title = [datastore[:slug], datastore[:title]]
