Creating and styling `_flint-message` partial.

--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -4,6 +4,7 @@
 @use './header/logo';
 @use './header/search';
 @use './header/navigation';
+@use './header/flint-message';
 
 // --------------------------------------------------
 //
