--- a/views/partials/_header.erb
+++ b/views/partials/_header.erb
@@ -27,6 +27,7 @@
 </m-website-header>
 <%= erb :'partials/header/_search' %>
 <%= erb :'partials/header/_navigation' %>
+<%= erb :'partials/header/_flint-message' %>
 <div class="logo__print">
   <%= erb :'partials/header/_logo' %>
 </div>
