Wrapping `choose-affiliation` with `form` element and updating scripts.
Next steps:
Use AJAX call to prevent page reload and update tests.

--- a/assets/styles/partials/header/_choose-affiliation.scss
+++ b/assets/styles/partials/header/_choose-affiliation.scss
@@ -22,6 +22,7 @@
   all: unset;
   @include utilities.flex();
   border-radius: forms.$radius;
+  color: white;
   cursor: pointer;
   font-size: 0.8em;
   font-weight: 600;
