--- a/views/partials/header/_choose-affiliation.erb
+++ b/views/partials/header/_choose-affiliation.erb
@@ -2,33 +2,28 @@
   affiliations = @presenter.affiliations
 %>
 
-<%= link_to(
-  body: affiliations.map do |affiliation| 
-    <<-HTML
-      <span class="#{affiliation.class}">
-        <span class="visually-hidden">#{affiliation.screen_reader_text}"</span>
-        <span>#{affiliation.name}</span>
+<form id="affiliation__form" method="post" action="/change-affiliation">
+  <button class="affiliation__change" type="submit">
+    <% affiliations.each do |affiliation| %>
+      <span class="<%= affiliation.class %>">
+        <span class="visually-hidden"><%= affiliation.screen_reader_text %>"</span>
+        <span><%= affiliation.name %></span>
       </span>
-    HTML
-  end.join,
-  url: affiliations.url,
-  classes: ["affiliation__change"]
-) %>
-
-<dialog class="container__rounded--no-shadow affiliation__dialog">
-  <section class="content">
-    <h2>Choose campus affiliation</h2>
-    <p>Selecting an affiliation helps us connect you to available online materials licensed for your campus.</p>
-    <div class="affiliation__dialog--buttons">
-      <button class="button__primary affiliation__dialog--dismiss">
-        Continue as <%= affiliations.active_affiliation %>
-      </button>
-      or
-      <form id="change_affiliation_form" method="post" action="/change-affiliation">
+    <% end %>
+  </button>
+  <dialog class="container__rounded--no-shadow affiliation__dialog">
+    <section class="content">
+      <h2>Choose campus affiliation</h2>
+      <p>Selecting an affiliation helps us connect you to available online materials licensed for your campus.</p>
+      <div class="affiliation__dialog--buttons">
+        <button class="button__primary affiliation__dialog--dismiss">
+          Continue as <%= affiliations.active_affiliation %>
+        </button>
+        or
         <button class="button__ghost" type="submit">Change to <%= affiliations.inactive_affiliation%></button>
-      </form>
-    </div>
-    <p><small>You can still use Library Search if you're not affiliated with either campus.</small></p>
-  </section>
-  <button class="button__link affiliation__dialog--dismiss">Dismiss</button>
-</dialog>
+      </div>
+      <p><small>You can still use Library Search if you're not affiliated with either campus.</small></p>
+    </section>
+    <button class="button__link affiliation__dialog--dismiss">Dismiss</button>
+  </dialog>
+</form>
