--- a/views/datastores/catalog.erb
+++ b/views/datastores/catalog.erb
@@ -11,7 +11,7 @@
   <ul class="list__no-style">
     <% @libraries.each do |library| %>
       <li>
-        <%= link_to(body: library, url: "?library=#{library.slug}", classes: ["button__ghost", library.active_class(params[:library])]) %>
+        <%= link_to(body: library, url: "?library=#{library.slug}", classes: ["button__ghost", library.active_class(param: params[:library])]) %>
       </li>
     <% end %>
   </ul>
