--- a/views/partials/header/_flint-message.erb
+++ b/views/partials/header/_flint-message.erb
@@ -5,7 +5,7 @@
     articles: "U-M Flint users: You may not be able to access U-M Ann Arbor resources. For the best results use #{link_to(body: "Thompson Library's Search All", url: "https://umich.primo.exlibrisgroup.com/discovery/search?vid=01UMICH_INST:FLINT")} to search for articles.",
     guidesandmore: "We noticed you are affiliated with U-M Flint. For the best results use the #{link_to(body: "Thompson Library website", url: "https://libguides.umflint.edu/library")}."
   }
-  property = @presenter.slug.to_sym
+  property = @presenter.slug&.to_sym
 %>
 <% if @patron.campus == "flint" && messages[property] %>
   <div class="flint-message">
